fixed layout issues

--- a/scripts/test.css
+++ b/scripts/test.css
@@ -3,9 +3,13 @@
     src: url('../fonts/texgyreschola.woff');
 }
 
+body {
+    padding-top: 65px;
+}
+
 .self {
 	position: relative;
-	top: 65px;
+	top: 0px;
 }
 
 .text {
